%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: open_node
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: node_open_fade_in
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: node_open_fade_up
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: node_close
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1101 &110100000
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110250076}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .0289951116
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: node_open_fade_in
    m_EventTreshold: 0
    m_ExitTime: .200000003
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110107789
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110283724}
  m_TransitionDuration: .494672984
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: New Bool
    m_EventTreshold: 0
    m_ExitTime: .5
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110133712
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110210312}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: node_open_fade_in
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110133895
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110295583}
  m_DstState: {fileID: 110260650}
  m_TransitionDuration: .496678054
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: New Bool
    m_EventTreshold: 0
    m_ExitTime: .5
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110137123
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110210312}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .245901644
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .754098356
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110163161
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110205760}
  m_DstState: {fileID: 110250076}
  m_TransitionDuration: .127118647
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: node_open_fade_in
    m_EventTreshold: 0
    m_ExitTime: .872881353
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110170566
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110294108}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: 1
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110170864
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110283724}
  m_DstState: {fileID: 110295583}
  m_TransitionDuration: .164027005
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: node_close
    m_EventTreshold: 0
    m_ExitTime: .5
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110176200
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110260650}
  m_DstState: {fileID: 110292247}
  m_TransitionDuration: .0043310402
  m_TransitionOffset: .756058216
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: New Bool
    m_EventTreshold: 0
    m_ExitTime: .995323598
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110182991
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110245246}
  m_DstState: {fileID: 110250076}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: 1
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Node_open
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: e2cc463fbab2c1848a18dcfe72bd9126, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 84, y: 276, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110205760
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: openNodeEnding 0
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 3762f8f90d62b9242a26a3376ae7e686, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 72, y: 444, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110210312
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: node_open_fade_in
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: f500ecd44a90c8d4598cced91bd8ae8c, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 228, y: 264, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110250076
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: node_open_invisible
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: e632873d37737974897747c983e7f8a2, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 72, y: 372, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110260650
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: openFadeOut
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 51cf29ba48331bc4499a34acb4d80519, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 96, y: 60, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110283724
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: node_open_idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 1d826b527d268da41b72eba1758fb523, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 84, y: 204, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110292247
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: openNodeEnding
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 3762f8f90d62b9242a26a3376ae7e686, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 96, y: -24, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110294108
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: New State
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 0}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 168, y: 204, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110295583
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: node_open_backwards
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 55334d0d8d1af364abd0844082e65f05, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 84, y: 132, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110205760}
  m_States:
  - {fileID: 110200000}
  - {fileID: 110283724}
  - {fileID: 110250076}
  - {fileID: 110260650}
  - {fileID: 110295583}
  - {fileID: 110292247}
  - {fileID: 110205760}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 0}
      second: []
    data:
      first: {fileID: 110205760}
      second:
      - {fileID: 110163161}
    data:
      first: {fileID: 110200000}
      second:
      - {fileID: 110107789}
    data:
      first: {fileID: 110283724}
      second:
      - {fileID: 110170864}
    data:
      first: {fileID: 110250076}
      second:
      - {fileID: 110100000}
    data:
      first: {fileID: 110260650}
      second:
      - {fileID: 110176200}
    data:
      first: {fileID: 110295583}
      second:
      - {fileID: 110133895}
    data:
      first: {fileID: 110292247}
      second: []
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 12, y: -108, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
